Tests/CompilerTests/positive/overloading.hylo
//! no-std

struct A { public memberwise init }
struct B { public memberwise init }

fun f() -> A { A() }

fun f() -> B { B() }

fun g(_ x: A) {}

fun main() {
  g(f())
}
